scr: rely on HikariCP and SpringBoot DataSource instead of self-brewed methods https://github.com/minova-afis/aero.minova.sam.scharr/issues/61