@@ -2,12 +2,12 @@ package aero.minova.cas.service;
 
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
-import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import lombok.RequiredArgsConstructor;
 import org.jooq.Condition;
 import org.jooq.Query;
 import org.jooq.SelectField;
@@ -25,23 +25,12 @@ import aero.minova.cas.sql.SqlUtils;
 import aero.minova.cas.sql.SystemDatabase;
 import lombok.val;
 
+@RequiredArgsConstructor
 @Service
 public class JOOQViewService implements ViewServiceInterface {
-
-	@Autowired
-	SystemDatabase systemDatabase;
-
-	@Autowired
-	CustomLogger customLogger;
-
-	@Autowired
-	private SecurityService securityService;
-
-	public JOOQViewService(SystemDatabase systemDatabase, CustomLogger customLogger, SecurityService securityService) {
-		this.systemDatabase = systemDatabase;
-		this.customLogger = customLogger;
-		this.securityService = securityService;
-	}
+	private final SystemDatabase systemDatabase;
+	private final CustomLogger customLogger;
+	private final SecurityService securityService;
 
 	public String prepareViewString(Table params, boolean autoLike, int maxRows, boolean isCounting, List<Row> authorities) throws IllegalArgumentException {
 
@@ -97,30 +86,24 @@ public class JOOQViewService implements ViewServiceInterface {
 			val preparedStatement = connection.prepareCall(viewQuery);
 			try (PreparedStatement preparedViewStatement = SqlUtils.fillPreparedViewString(inputTable, preparedStatement, viewQuery, sb,
 					customLogger.getErrorLogger())) {
-				customLogger.logPrivilege("Executing SQL-statement for view: " + sb.toString());
+				customLogger.logPrivilege("Executing SQL-statement for view: " + sb);
 				try (ResultSet resultSet = preparedViewStatement.executeQuery()) {
 					result = SqlUtils.convertSqlResultToTable(inputTable, resultSet, customLogger.getUserLogger(), this);
 				}
 			}
-			systemDatabase.freeUpConnection(connection);
+
 		} catch (Exception e) {
-			if (connection != null) {
-				try {
-					connection.close();
-				} catch (SQLException e1) {
-					customLogger.logError("Connection could not be closed: ", e1);
-				}
-			}
-			customLogger.logError("Statement could not be executed: " + sb.toString(), e);
+			customLogger.logError("Statement could not be executed: " + sb, e);
 			throw new RuntimeException(e);
+		} finally {
+			systemDatabase.closeConnection(connection);
 		}
 		return result;
 	}
 
 	public Condition rowLevelSecurity(List<Row> requestingAuthorities) {
-		List<String> requestingRoles = new ArrayList<>();
 		if (!requestingAuthorities.isEmpty()) {
-			requestingRoles = securityService.extractUserTokens(requestingAuthorities);
+			List<String> requestingRoles = securityService.extractUserTokens(requestingAuthorities);
 			// Falls die Liste leer ist, darf der User alle Spalten sehen.
 			if (requestingRoles.isEmpty()) {
 				return null;
@@ -192,10 +175,10 @@ public class JOOQViewService implements ViewServiceInterface {
 					} else if (rule.equals("<>")) {
 						condition.and(DSL.field(params.getColumns().get(i).getName()).ne(r.getValues().get(i).getValue().toString()));
 					} else if (rule.equals("between()")) {
-						List<String> betweenValues = Stream.of(value.getValue().toString().split(",")).collect(Collectors.toList());
+						List<String> betweenValues = Stream.of(value.getValue().toString().split(",")).toList();
 						condition = condition.and(DSL.field(params.getColumns().get(i).getName()).between(betweenValues.get(0), betweenValues.get(1)));
 					} else if (rule.equals("in()")) {
-						List<String> inValues = Stream.of(value.getValue().toString().split(",")).collect(Collectors.toList());
+						List<String> inValues = Stream.of(value.getValue().toString().split(",")).toList();
 
 						condition = condition.and(DSL.field(params.getColumns().get(i).getName()).in(inValues));
 					} else {
